// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty assign 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Empty {
          "expression": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "kind": "empty",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`empty simple 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Empty {
        "expression": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "kind": "empty",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
